# dbt-blueprint

./: README.md  pyproject.toml
.github/: pr-dbt.yml
.github/workflows/: pr-dbt.yml
dbt_blueprint/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_blueprint/data_tests/: int_transactions_validate_transaction_uid.sql
dbt_blueprint/macros/: calculate_age.sql  calculate_age_group.sql  generate_schema_name.sql
dbt_blueprint/models/: exposures.yml
dbt_blueprint/models/marts/: _mart_data_contracts.yml  users__pii.sql  users__public.sql
dbt_blueprint/models/marts/aggregates/: marts_payments_daily.sql  marts_user_card_transactions_daily.sql
dbt_blueprint/models/marts/dimensions/: dim_account_current.sql  dim_account_scd2.sql  dim_card_current.sql  dim_card_scd2.sql  dim_merchant_current.sql  dim_merchant_scd2.sql  dim_user_current__pii.sql  dim_user_current__public.sql  dim_user_scd2__pii.sql  dim_user_scd2__public.sql
dbt_blueprint/models/marts/facts/: fact_transaction.sql
dbt_blueprint/models/semantic/: enriched_transactions.sql
dbt_blueprint/models/staging/merchants/: _merchant_data_contracts.yml  _merchant_sources.yml  _merchants_docs.md  stg_industry_codes.sql  stg_merchants.sql
dbt_blueprint/models/staging/payment_sources/: _payment_source_data_contracts.yml  _payment_source_sources.yml  payment_source_docs.md  stg_account_events.sql  stg_card_events.sql
dbt_blueprint/models/staging/transactions/: _transaction_data_contracts.yml  _transaction_sources.yml  (+5 more)
dbt_blueprint/unit_tests/macros/: test_source.sql
(+14 files in other folders)
